Finished: Resize body when drawer is open, to prevent covering content in the app(s) being inspected

--- a/src/less/stylesheet.less
+++ b/src/less/stylesheet.less
@@ -37,9 +37,8 @@ body {
 }
 
 .ngi-open {
-	margin-right: @panel-width !important;
 	// http://stackoverflow.com/a/17904128
-	width: calc(~"100% - "@panel-width) !important;
+	//width: calc(~"100% - "@panel-width) !important;
 	overflow: scroll !important;
 }
 
